Add pre-defined item xml from 16.1

--- a/Rawr.csproj
+++ b/Rawr.csproj
@@ -375,6 +375,12 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="ItemCache.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="ItemSource.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="RawrIcon.ico" />
     <Content Include="ReadMe.txt" />
     <Content Include="Resources\Diamond2.png" />
