--- a/Rawr.UnitTests/Rawr.UnitTests.csproj
+++ b/Rawr.UnitTests/Rawr.UnitTests.csproj
@@ -87,7 +87,7 @@
     <Compile Include="TankDK\WeaponTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Shadow Include="Test References\Rawr.Base.accessor" />
+    <None Include="Test References\Rawr.Base.accessor" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Rawr.Base\Rawr.Base.csproj">
@@ -130,7 +130,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
