Fix icon downloading

--- a/Rawr.Base/app.config
+++ b/Rawr.Base/app.config
@@ -97,7 +97,7 @@
 				<value/>
 			</setting>
 			<setting name="ArmoryTalentIconURI" serializeAs="String">
-				<value>http://www.wowarmory.com/wow-icons/_images/_talents31x31/{0}</value>
+				<value>https://wotlkdb.com/static/images/wow/icons/medium/{0}</value>
 			</setting>
 			<setting name="QuestWowheadURI" serializeAs="String">
 				<value>http://www.wowhead.com/?quest={0}</value>
@@ -107,7 +107,7 @@
 	<applicationSettings>
 		<Rawr.Properties.NetworkSettings>
 			<setting name="WoWItemIconURI" serializeAs="String">
-				<value>http://www.wowarmory.com/wow-icons/_images/64x64/</value>
+				<value>https://wotlkdb.com/static/images/wow/icons/large/</value>
 			</setting>
 			<setting name="UserAgent_IE7" serializeAs="String">
 				<value>Mozilla/4.0 (compatible; MSIE 7.0; Windows NT 5.1; bgft) </value>
