--- a/app.config
+++ b/app.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -13,7 +13,7 @@
   <userSettings>
     <Rawr.Properties.Recent>
       <setting name="RecentFiles" serializeAs="String">
-        <value />
+        <value/>
       </setting>
       <setting name="RecentModel" serializeAs="String">
         <value>Bear</value>
@@ -92,4 +92,4 @@
       <probing privatePath="Data"/>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
