--- a/Rawr.Base/app.config
+++ b/Rawr.Base/app.config
@@ -155,4 +155,4 @@
 			<probing privatePath="Data"/>
 		</assemblyBinding>
 	</runtime>
-	<startup/></configuration>
+	<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
